# nsds-project

./: .gitignore  .gitmodules  README.md  docker-compose.yml
infrastructure/: .gitignore
infrastructure/kafkaui/: config.yml
infrastructure/mosquitto/config/: mosquitto.conf
infrastructure/nodered/: Dockerfile
infrastructure/nodered/data/: .config.nodes.json  .config.runtime.json  .config.users.json  .gitignore  flows.json  flows_cred.json  package.json
src/AkkaServices/: Dockerfile  pom.xml
src/AkkaServices/src/main/java/AccountService/: AccountService.java  AccountServiceApp.java  User.java  UserRequestEvent.java
src/AkkaServices/src/main/java/BillingService/: BillingService.java  BillingServiceApp.java  UsageRecordEvent.java
src/AkkaServices/src/main/java/DistrictNodeManager/: DistrictNodeManager.java  DistrictNodeManagerApp.java  Node.java  NodeRequestEvent.java
src/AkkaServices/src/main/resources/: application.conf  logback.xml
src/frontend/: .dockerignore  Dockerfile  README.md  requirements.txt
src/frontend/.run/: streamlit (Docker).run.xml  streamlit.run.xml
src/frontend/src/: app.py
src/frontend/src/communication/: client.py  config.py  kafka_service.py  spark_service.py
src/frontend/src/pages/: 1_User_Management.py  2_Node_Management.py  3_Monitoring.py
src/simulation/: .gitignore  CMakeLists.txt
src/simulation/src/: main.cpp
src/smart-grid-iot/: .gitignore
src/smart-grid-iot/motes/: Makefile  project-conf.h  smart-grid-mote.c
src/smart-grid-iot/simulations/: nsds-simulation.csc  start_simulation.sh
(+17 files in other folders)
